# reqres_api_project

./: .gitignore  README.md  pyproject.toml  pytest.ini
data/: registration.yaml  user_management.yaml
data/json_schemas/: get_single_user.json  post_create_user.json  post_register_user.json  put_update_user.json
helpers/: api_client.py  data_provider.py  load_schema.py
tests/: config.py  test_methods_reqres_in.py  test_registration.py  test_user_management.py
