[tool.poetry]
name = "qa-guru-hw-17-api"
version = "0.1.0"
description = ""
authors = ["DmitryAsl <aslamovdima10@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.3.4"
requests = "^2.32.3"
jsonschema = "^4.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
